--- a/exercícios/exercíciosLógicaProgramação/exercicio-02/index.html
+++ b/exercícios/exercíciosLógicaProgramação/exercicio-02/index.html
@@ -9,24 +9,7 @@
 <body>
 
     <section class="container">
-        <h1>Aqui é um card que irá revelar uma ação programada</h1>
-        <p>Seja bem vindo ao MisteryCard onde você vai experienciar um gostinho do poder da programação, nesse simples website. Aqui nós iremos tratar os dados de maneira intencional, à praticar os exercícios a fim de memorizar conceitos do JavaScript! Sinta-se à vontade para testar e se divertir aprendendo.</p>
-
-        <form>
-            <label for="input-teste-1">Label teste #1</label>
-            <input type="text" id="input-teste-1">
-
-            <label for="input-teste-2">Label teste #2</label>
-            <input type="text" id="input-teste-2">
-
-            <label for="input-teste-3">Label teste #3</label>
-            <input type="text" id="input-teste-3">
-
-            <label for="input-teste-4">Label teste #4</label>
-            <input type="text" id="input-teste-4">
-            
-            <button>Enviar</button>
-        </form>
+        <h1 class="info"></h1>
     </section>
 
     <script src="assets/js/main.js"></script>
