--- a/exercícios/exercíciosLógicaProgramação/exercicio-02/index.html
+++ b/exercícios/exercíciosLógicaProgramação/exercicio-02/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <section class="container">
-        <h1 class="info"></h1>
+        <h1 class="h1"></h1>
     </section>
 
     <script src="assets/js/main.js"></script>
