--- a/exercícios/exercíciosLógicaProgramação/exercicio-01/index.html
+++ b/exercícios/exercíciosLógicaProgramação/exercicio-01/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <section class="container">
-        <h1>Calculadora IMC</h1>
+        <h1 style="color: red;">Calculadora IMC</h1>
         <div class="info">
             
             <ul>
