--- a/exercícios/exercíciosLógicaProgramação/exercicio-09/index.html
+++ b/exercícios/exercíciosLógicaProgramação/exercicio-09/index.html
@@ -9,24 +9,38 @@
 <body>
 
     <section class="container">
-        <h1>Aqui é um card que irá revelar uma ação programada</h1>
-        <p>Seja bem vindo ao MisteryCard onde você vai experienciar um gostinho do poder da programação, nesse simples website. Aqui nós iremos tratar os dados de maneira intencional, à praticar os exercícios a fim de memorizar conceitos do JavaScript! Sinta-se à vontade para testar e se divertir aprendendo.</p>
+        <h1>Calculadora</h1>
 
-        <form>
-            <label for="input-teste-1">Label teste #1</label>
-            <input type="text" id="input-teste-1">
+        <table class="calculadora">
+            <tr>
+                <td colspan="4"><input type="text" class="display"></td>
+            </tr>
+            <tr>
+                <td><button class="btn btn-clear">C</button></td>
+                <td><button class="btn btn-num">(</button></td>
+                <td><button class="btn btn-num">)</button></td>
+                <td><button class="btn btn-num">/</button></td>
+            </tr>
+            <tr>
+                <td><button class="btn btn-num">4</button></td>
+                <td><button class="btn btn-num">5</button></td>
+                <td><button class="btn btn-num">6</button></td>
+                <td><button class="btn btn-num">+</button></td>
+            </tr>
+            <tr>
+                <td><button class="btn btn-num">1</button></td>
+                <td><button class="btn btn-num">2</button></td>
+                <td><button class="btn btn-num">3</button></td>
+                <td><button class="btn btn-num">-</button></td>
+            </tr>
+            <tr>
+                <td><button class="btn btn-num">.</button></td>
+                <td><button class="btn btn-num">0</button></td>
+                <td><button class="btn btn-del">&laquo;</button></td>
+                <td><button class="btn btn-eq">=</button></td>
+            </tr>
 
-            <label for="input-teste-2">Label teste #2</label>
-            <input type="text" id="input-teste-2">
-
-            <label for="input-teste-3">Label teste #3</label>
-            <input type="text" id="input-teste-3">
-
-            <label for="input-teste-4">Label teste #4</label>
-            <input type="text" id="input-teste-4">
-            
-            <button>Enviar</button>
-        </form>
+        </table>
     </section>
 
     <script src="assets/js/main.js"></script>
