--- a/Objetos Avançado/aula06/index.html
+++ b/Objetos Avançado/aula06/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="prototypes.js"></script>
+    <script src="proto02.js"></script>
 </body>
 </html>
