--- a/JavaScript Assíncrono/XMLhttpRequest/modeloHTML/index.html
+++ b/JavaScript Assíncrono/XMLhttpRequest/modeloHTML/index.html
@@ -10,8 +10,13 @@
 
     <section class="container">
         <h1>It'll happens something anywhere here</h1>
+        <a href="pagina-1.html">Página 1</a>
+        <a href="pagina-2.html">Página 2</a>
+        <a href="pagina-3.html">Página 3</a>
         
-        </form>
+        <div class="resultado">
+            
+        </div>
     </section>
 
     <script src="assets/js/main.js"></script>
