--- a/JavaScript Assíncrono/XMLhttpRequest/modeloHTML/index.html
+++ b/JavaScript Assíncrono/XMLhttpRequest/modeloHTML/index.html
@@ -19,6 +19,6 @@
         </div>
     </section>
 
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js//main.js"></script>
 </body>
 </html>
