using fetch api

--- a/JavaScript Assíncrono/fetchAPI-JSON/index.html
+++ b/JavaScript Assíncrono/fetchAPI-JSON/index.html
@@ -10,6 +10,7 @@
 
     <section class="container">
         <h1>Aqui é um card que irá revelar uma ação programada</h1>
+        <div class="resultado"></div>
     </section>
 
     <script src="assets/js/main.js"></script>
