--- a/html simples/index.html
+++ b/html simples/index.html
@@ -11,7 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+        <link rel="shortcut icon" href="/assets/imagens/dress.png" type="image/x-icon">
+    <title>Marcia Store</title>
 </head>
 
 <body>
@@ -26,21 +27,26 @@
                 <a href="#" class="link">Casa</a>
                 <a href="#" class="link">Produtos</a>
                 <a href="#" class="link">Sobre nós</a>
-                <a href="#" class="link contato">Contato</a>
+                <a href="#" class="link contato" id="contato">Contato</a>
             </div>
         </nav>
     </header>
 
-    <main >
+    <main style="background-image: url('/assets/imagens/fundo.jpg');">
 
         <div class="section-conteudo">
             <div class="texto">
                 <div class="texto-flex">
-                    <h1>Bem vindo ao meu primeiro site</h1>
-                    <p>Espresse sua expressão através da moda! Crie uma presença marcante por onde quer que você passe, usando nossas roupas você garante conforto, e qualidade nas peças que comprar. Pois elas são versáteis e é possível combina-las entre si, criando diversos modelitos, realçando o que há de melhor em você.</p>
-                                </div>
+                    <div class="text">
+                        <h1>Bem vindo ao meu primeiro site</h1>
+                        <p>Espresse sua expressão através da moda! Crie uma presença marcante por onde quer que você passe, usando nossas roupas você garante conforto, e qualidade nas peças que comprar. Pois elas são versáteis e é possível combina-las entre si, criando diversos modelitos, realçando o que há de melhor em você.
+                        </p>
+                    </div>
                 </div>
+            </div>
         </div>
+
+        <img src="/assets/imagens/womans" alt="">
 
     </main>
 
